--- a/src/styles.css
+++ b/src/styles.css
@@ -19,11 +19,6 @@ a.active {
   border-bottom: 2px solid #d25ca1;
 }
 
-a.button.active {
-  padding-bottom: 5px;
-  border-bottom: 2px solid #d25ca1;
-}
-
 a:visited {
   color: #444;
 }
@@ -82,6 +77,7 @@ button {
 
 a.button {
   font-size: 15px;
+  text-align: center;
   padding: 15px 25px;
   background-color: #5cadd2;
   color: #fff;
@@ -89,6 +85,10 @@ a.button {
   box-shadow: none;
   border-radius: 5px;
   cursor: pointer;
+}
+
+a.button.active {
+  border-bottom: 2px solid #d25ca1;
 }
 
 a.button:hover {
