--- a/src/styles.css
+++ b/src/styles.css
@@ -65,6 +65,7 @@ ul {
 }
 
 button {
+  position: relative;
   font-size: 15px;
   padding: 15px 25px;
   background-color: #5cadd2;
@@ -76,6 +77,7 @@ button {
 }
 
 a.button {
+  position: relative;
   font-size: 15px;
   text-align: center;
   padding: 15px 25px;
@@ -121,4 +123,42 @@ input {
 .button.cta:disabled {
   background-color: #f590c4;
   color: #aaa;
+}
+
+button:not([disabled])::after {
+  content: "";
+  display: block;
+  position: absolute;
+  border-radius: 5px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: all 0.5s;
+}
+
+button:not([disabled]):active::after {
+  position: absolute;
+  border-radius: 5px;
+  left: 0;
+  top: 0;
+  opacity: 1;
+  transition: 0s;
+}
+
+button:not([disabled])::after {
+  box-shadow: 0 0 10px 20px #5cadd2;
+}
+
+button:not([disabled]):active::after {
+  box-shadow: 0 0 0 0 #5cadd2;
+}
+
+button:not([disabled]).cta::after {
+  box-shadow: 0 0 10px 20px #f590c4;
+}
+
+button:not([disabled]).cta:active::after {
+  box-shadow: 0 0 0 0 #f590c4;
 }
