Use product-details component on cart

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -2,7 +2,9 @@
   <input class="search" placeholder="Search..." (keyup)="filter($event)" />
   <ul class="products">
     <li class="product-item" *ngFor="let product of getFilteredProducts()">
-      <bot-product-details [product]="product" (buy)="addToCart(product)"></bot-product-details>
+      <bot-product-details [product]="product">
+        <button class="cta" (click)="addToCart(product)">Buy</button>
+      </bot-product-details>
     </li>
   </ul>
 </div>
