--- a/src/app/catalog/catalog.component.html
+++ b/src/app/catalog/catalog.component.html
@@ -1,7 +1,9 @@
 <div class="container">
   <ul class="products">
     <li class="product-item" *ngFor="let product of products()">
-      <bot-product-details [product]="product" (buy)="addToCart(product)"></bot-product-details>
+      <bot-product-details [product]="product">
+        <button class="cta" (click)="addToCart(product)">Buy</button>
+      </bot-product-details>
     </li>
   </ul>
 </div>
