--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -14,6 +14,6 @@
     <div *ngIf="product.discount > 0" class="discount">
       {{ product.price * (1 - product.discount) | currency : "USD" }}
     </div>
-    <button class="cta" (click)="buyButtonClicked(product)">Buy</button>
+    <ng-content></ng-content>
   </div>
 </div>
