--- a/src/app/site-header/site-header.component.html
+++ b/src/app/site-header/site-header.component.html
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="right" *ngIf="!user">
-    <a routerLink="/sign-in" routerLinkActive="active">Sign In</a>
+    <a routerLink="/user/sign-in" routerLinkActive="active">Sign In</a>
     <a href="" class="cta">Register</a>
   </div>
   <div class="right" *ngIf="user">
