--- a/src/app/core/site-header/site-header.component.html
+++ b/src/app/core/site-header/site-header.component.html
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="right">
-    <a routerLink="/squad/squad-catalog" routerLinkActive="active">Bot Squad</a>
-    <a routerLink="/squad/squad-cart" class="cta">Squad Cart</a>
+    <a routerLink="/squad/bot-squad" routerLinkActive="active">Bot Squad</a>
+    <a routerLink="/squad/squad-cart">Squad Roster</a>
   </div>
 </div>
